combined chart component

--- a/src/app/meeting/meeting.component.html
+++ b/src/app/meeting/meeting.component.html
@@ -1,5 +1,5 @@
 <router-outlet>
-  <div class="wrapper container">
+  <div class="wrapper">
     <div class="Wrapper1">
       <form (ngSubmit)="onSubmit(meetings)" name="userForm" id="myForm" #meetingForm="ngForm">
         <h3>CREATE A NEW MEETING</h3>
@@ -166,7 +166,7 @@
                           Cancel        <span class="glyphicon glyphicon-remove" aria-hidden="true" data-toggle="tooltip" title="Go Back to List"></span>
             </button>
 
-
+          
           </div>
         </div>
       </form>
