--- a/src/app/moreDetails/moreDetails.component.html
+++ b/src/app/moreDetails/moreDetails.component.html
@@ -47,10 +47,10 @@
     <div class="tab-content">
       <div id="discussion" class="tab-pane fade in active">
         <!--Table-->
-        <div class="panel panel-primary">
+        <div class="panel panel-primary discussionTab">
           <div class="panel-body">
             <div class="table-responsive">
-              <table class="table table-bordered table-hover">
+              <table class="table table-bordered table-hover ">
                 <thead>
                   <tr>
                     <th class="col-md-2 centreTh">
@@ -96,10 +96,10 @@
       </div>
       <div id="action" class="tab-pane fade">
         <!--Table-->
-        <div class="panel panel-primary">
+        <div class="panel panel-primary actionTab">
           <div class="panel-body">
             <div class="table-responsive">
-              <table class="table table-bordered table-hover">
+              <table class="table table-bordered table-hover ">
                 <thead>
                   <tr>
                     <th class="col-md-4 centreTh">
@@ -150,10 +150,10 @@
         </div>
       </div>
       <div id="downloadLinks" class="tab-pane fade">
-        <div class="panel panel-primary">
+        <div class="panel panel-primary historyTab">
           <div class="panel-body">
             <div class="table-responsive">
-              <table class="table table-bordered table-hover">
+              <table class="table table-bordered table-hover ">
                 <thead>
                   <tr>
                     <th class="col-md-4 centreTh">
