--- a/src/app/quarterMeetings/quarterMeetings.component.html
+++ b/src/app/quarterMeetings/quarterMeetings.component.html
@@ -1,15 +1,15 @@
 <div class="container">
   <ul class="nav nav-tabs nav-justified">
-    <li class="active" style="text-align:centre;"><a data-toggle="pill" href="#meetingsYearly"  (click)="removeSvg();displayHeatMap()">Meetings Conducted Yearly</a></li>
+    <li class="active" style="text-align:centre;"><a data-toggle="pill" href="#meetingsYearly"  (click)="removeSvg()">Meetings Conducted Yearly</a></li>
     <li style="text-align:centre;"><a data-toggle="pill" href="#actionTimespan" (click)="removeSvg()" >Action Items average Timespan</a></li>
-    <li style="text-align:centre;"><a data-toggle="pill" href="#quarterMeetings" (click)="removeSvg()">Meetings per quarter</a></li>
+    <li style="text-align:centre;"><a data-toggle="pill" href="#quarterMeetings" (click)="removeSvg();clearQuarterInfo()">Meetings per quarter</a></li>
   </ul>
   <br/>
   <div class="tab-content">
     <div id="meetingsYearly" class="tab-pane fade in active">
       <div class="modal fade" id="myModal" role="dialog">
         <div class="modal-dialog">
-          <div class="modal-content">
+          <div class="modal-content" *ngIf="!showMoreDetails">
             <div class="modal-header">
               <button type="button" class="close" data-dismiss="modal">&times;</button>
               <h4 id="details" class="modal-title">Details : {{formatteddate}}</h4>
@@ -24,7 +24,7 @@
                 </thead>
                 <tbody>
                   <tr *ngFor="let detail of details">
-                    <td><a routerLinkActive="active" (click)="moreDetails(detail.meetingId)">{{detail.meetingTitle}}</a></td>
+                    <td><a routerLinkActive="active" (click)="moreDetails(detail.meetingId);showMoreDetails = true;">{{detail.meetingTitle}}</a></td>
                     <td>{{detail.meetingType}}</td>
                   </tr>
                 </tbody>
@@ -34,21 +34,21 @@
               <button type="button" class="btn btn-default" data-dismiss="modal">OK</button>
             </div>
           </div>
-        </div>
-      </div>
 
-      <div class="modal fade" id="moreDetailsModal" role="dialog">
-        <div class="modal-dialog moreDetailsModal">
-          <!-- Discussion Modal content-->
-          <div class="modal-content">
+          <div class="modal-content" *ngIf="showMoreDetails" id="moreDetailsModal">
             <div class="modal-header">
               <div class="modal-title">
-                <button type="button" class="close" data-dismiss="modal">&times;</button>
+                <!-- <button type="button" class="close" data-dismiss="modal">&times;</button> -->
+                <button type="button" class="btn btn-default btn-lg floatPosition close" data-dismiss="modal">
+                    <span class="glyphicon glyphicon-remove floatPositionIcon" aria-hidden="true" data-toggle="tooltip" title="Close"></span>
+                </button>
                 <span>Meeting information</span>
+                <button type="button" class="btn btn-default btn-lg floatPosition close" (click)="showMoreDetails = false">
+                    <span class="glyphicon glyphicon-repeat floatPositionIcon icon-flipped" aria-hidden="true" data-toggle="tooltip" title="Return to Meetinglist"></span>
+                </button>
               </div>
             </div>
             <div class="modal-body">
-
               <div class="tableSection">
                 <section class="primaryDetails row">
                   <div class="table-responsive">
@@ -226,7 +226,7 @@
                                   <span>{{meeting.fileName}}</span>
                                 </td>
                                 <td class="centreTh">
-                                  <button type="button" class="btn btn-default btn-sm" (click)="downloadPrevExcel(meeting.fileName)">
+                                  <button type="button"  class="btn btn-default btn-sm" (click)="downloadPrevExcel(meeting.fileName)">
                                       <span class="glyphicon glyphicon-download-alt glyphiconIcon" aria-hidden="true" data-toggle="tooltip" title="Download"></span>
                                   </button>
                                 </td>
@@ -239,20 +239,24 @@
                   </div>
                 </div>
               </div>
-
             </div>
           </div>
+
+
         </div>
       </div>
+
+
       <strong> MEETINGS- {{year}} </strong><br><br>
       <label for="example-text-input" class="col-md-2 col-form-label">Select Year* :</label>
-      <div class="col-md-4">
-        <select class="form-control" required [(ngModel)]="year" name="type" (change)="displayHeatMap(year);">
-          <option value="" disabled="disabled" selected="selected">Please select a Meeting Type</option>
+      <div class="col-md-4 inputYear">
+        <select id="year" class="form-control" required [(ngModel)]="year" name="type" (change)="displayHeatMap(year);">
+          <option value="default" disabled="disabled" selected="selected">Please select a Year</option>
           <option *ngFor="let y of years" [value]="y">{{y}}</option>
         </select>
       </div>
     </div>
+
     <div id="actionTimespan" class="tab-pane fade">
       <div class="chartBody">
         <h4>Select Date: <input type="date" [(ngModel)]="selectDate" (change)="generateGraph(selectDate);"><span class="glyphicon glyphicon-exclamation-sign" aria-hidden="true" data-toggle="tooltip" title="Meeting/s Information for the Selected Date will be Displayed"></span></h4>
@@ -317,7 +321,7 @@
         </div>
       </div>
 
-      <div class="modal-content" *ngIf="showDetails" id="moreDetailsModal">
+      <div class="modal-content" *ngIf="showDetails" id="showDetailsModal">
         <div class="modal-header">
           <div class="modal-title">
             <!-- <button type="button" class="close" data-dismiss="modal">&times;</button> -->
