--- a/src/app/meeting/meeting.component.html
+++ b/src/app/meeting/meeting.component.html
@@ -4,65 +4,63 @@
       <form (ngSubmit)="onSubmit(meetings)" name="userForm" id="myForm" #meetingForm="ngForm">
         <h3>CREATE A NEW MEETING</h3>
         <div class="form-group row">
-        <div [hidden]="edit_view">
-          <label for="example-text-input" class="col-md-2 col-form-label">Meeting Id* :</label>
-          <div class="col-md-4">
-            <input readonly="readonly" class="form-control" name="meeting_id" type="text" placeholder="Enter the Meeting Id" id="example-text-input" required [(ngModel)]="meetings.meetingId" #id="ngModel">
-            <div [hidden]="id.valid || id.pristine" class="alert alert-danger">Meeting ID is required</div>
+          <div [hidden]="edit_view">
+            <label for="example-text-input" class="col-md-2 col-form-label">Meeting Id* :</label>
+            <div class="col-md-4">
+              <input readonly="readonly" class="form-control" name="meeting_id" type="text" placeholder="Enter the Meeting Id" id="example-text-input" required [(ngModel)]="meetings.meetingId" #id="ngModel">
+              <div [hidden]="id.valid || id.pristine" class="alert alert-danger">Meeting ID is required</div>
+            </div>
           </div>
-        </div>
           <span id="openStatus"></span>
-      </div>
+        </div>
         <div class="form-group row">
 
           <label for="example-text-input" class="col-md-2 col-form-label">Meeting Title* :</label>
           <div class="col-md-4">
-            <input class="form-control" name="title" type="text" placeholder="Enter the Meeting Title" id="example-text-input" required [(ngModel)]="meetings.meetingTitle" #title="ngModel" pattern="^[a-zA-Z0-9_]*$">
+            <!-- <input class="form-control" name="title" type="text" placeholder="Enter the Meeting Title" id="example-text-input" required [(ngModel)]="meetings.meetingTitle" #title="ngModel" pattern="^[a-zA-Z0-9_]*$"> -->
+            <input class="form-control" name="title" type="text" placeholder="Enter the Meeting Title" id="example-text-input" required [(ngModel)]="meetings.meetingTitle" #title="ngModel">
             <div [hidden]="title.valid || title.pristine" class="alert alert-danger">Meeting title is required & must be valid.</div>
           </div>
           <span id="openStatus"></span>
           <label for="example-text-input" class="col-md-2 col-form-label">Meeting Status* :</label>
           <div class="radio col-md-4">
             <label>
-					          <input #open name="radio" type="radio" value="1"  (onload)="meetings.meetingStatus = open.value"  (click)="reasonclose()" checked />
-					              Open
+					    <input #open name="radio" type="radio" value="1"  (onload)="meetings.meetingStatus = open.value"  (click)="reasonclose()" checked />
+					      Open
             </label>
             <label>
-			             <input #closed name="radio" type="radio" value="2"  [disabled]="edit_view" (change)="meetings.meetingStatus = closed.value" (click)="reasonclose()" />
-				               Closed
+			        <input #closed name="radio" type="radio" value="2"  [disabled]="edit_view" (change)="meetings.meetingStatus = closed.value" (click)="reasonclose()" />
+				        Closed
 			      </label>
             <label [hidden]="edit_view">
-			             <input #cancel name="radio" type="radio" value="5"   (change)="meetings.meetingStatus = cancel.value" (click)="reason()" />
-				               Cancel
+			         <input #cancel name="radio" type="radio" value="5"   (change)="meetings.meetingStatus = cancel.value" (click)="reason()" />
+				          Cancel
 			      </label>
             <br>
           </div>
         </div>
 
         <div class="form-group row" *ngIf="cancelMeet">
-
-        <div style="visibility:hidden;">
+          <div style="visibility:hidden;">
             <label id="reasonlabel" for="example-url-input" class="col-md-2 col-form-label">Reason :</label>
             <div class="col-md-4">
               <textarea id="reasonarea" class="form-control" name="reason" rows="3" [(ngModel)]="meetings.meetingReason" #name="ngModel"></textarea>
             </div>
-        </div>
-        <div>
+          </div>
+          <div>
             <label id="reasonlabel" for="example-url-input" class="col-md-2 col-form-label">Reason :</label>
             <div class="col-md-4">
               <textarea id="reasonarea" class="form-control" name="reason" rows="3" [(ngModel)]="meetings.meetingReason" #name="ngModel"></textarea>
             </div>
+          </div>
         </div>
-      </div>
 
-      <div class="form-group row">
-
+        <div class="form-group row">
           <label for="example-email-input" class="col-md-2 col-form-label">Date* :</label>
           <div class="col-md-4">
             <input id="datepicker" class="form-control" type="date" required [(ngModel)]="meetings.meetingDate" name="date" #date="ngModel" value="meetings.meetingDate">
             <div [hidden]="date.valid || date.pristine" class="alert alert-danger">Meeting Date is required</div>
           </div>
-
           <label for="example-text-input" class="col-md-2 col-form-label">Meeting Type* :</label>
           <div id="checkboxSelectCombo" class="col-md-4">
             <select class="form-control" required [(ngModel)]="meetings.meetingType" name="type">
@@ -70,7 +68,6 @@
               <option *ngFor="let type of types" [value]="type.id">{{type.meetingType}}</option>
 						</select>
           </div>
-
         </div>
 
         <div class="form-group row">
@@ -83,9 +80,9 @@
           <label for="example-text-input" class="col-md-2 col-form-label">Facilitator* :</label>
           <div class="col-md-4">
             <select class="form-control" name="facilitator" [(ngModel)]="meetings.meetingFacilitator" required>
-                      <option value="" disabled="disabled" selected="selected">Please select a Facilitator</option>
-                      <option *ngFor="let fac of facilitator" [value]="fac.id">{{fac.firstlast}}</option>
-						      </select>
+              <option value="" disabled="disabled" selected="selected">Please select a Facilitator</option>
+              <option *ngFor="let fac of facilitator" [value]="fac.id">{{fac.firstlast}}</option>
+						</select>
           </div>
         </div>
 
@@ -94,29 +91,27 @@
           <div class="col-md-4">
             <div class="col-md-4">
               <select class="form-control" name="shour" [(ngModel)]="meetings.startHours" (ngModelChange)="onChangeSHours($event)" required>
-                     <option *ngFor="let hour of time.hours" [attr.value]="hour">{{hour}}</option>
-                </select>
+                <option *ngFor="let hour of time.hours" [attr.value]="hour">{{hour}}</option>
+              </select>
             </div>
             <div class="col-md-4">
               <select class="form-control" name="smin" [(ngModel)]="meetings.startMinutes" (ngModelChange)="onChangeSMins($event)" required>
-                     <option *ngFor="let min of time.minutes" [attr.value]="min">{{min}}</option>
-                </select>
+                <option *ngFor="let min of time.minutes" [attr.value]="min">{{min}}</option>
+              </select>
             </div>
             <div class="col-md-4">
               <select [(ngModel)]="meetings.startForm" class="form-control" name="sform" (ngModelChange)="onChangeSForm($event)" required>
-                     <option *ngFor="let form of time.form" [attr.value]="form">{{form}}</option>
-                </select>
+                <option *ngFor="let form of time.form" [attr.value]="form">{{form}}</option>
+              </select>
             </div>
-
           </div>
           <label for="example-url-input" class="col-md-2 col-form-label">Duration* : </label>
-            <div class="col-md-4 ">
-              <select class="form-control" name="duration" [(ngModel)]="meetings.duration" (ngModelChange)="onChangeDuration($event)" required>
-                    <option [attr.value]="duration[0]">{{duration[0]}} mins</option>
-                    <option *ngFor="let hour of duration | slice:1" [attr.value]="hour">{{hour}} hrs</option>
-                </select>
-            </div>
-
+          <div class="col-md-4 ">
+            <select class="form-control" name="duration" [(ngModel)]="meetings.duration" (ngModelChange)="onChangeDuration($event)" required>
+              <option [attr.value]="duration[0]">{{duration[0]}} mins</option>
+              <option *ngFor="let hour of duration | slice:1" [attr.value]="hour">{{hour}} hrs</option>
+            </select>
+          </div>
         </div>
 
         <div class="form-group row">
@@ -127,24 +122,21 @@
           <label for="example-text-input" class="col-md-2 col-form-label">Recorder* :</label>
           <div class="col-md-4">
             <select class="form-control" name="recorder" [(ngModel)]="meetings.meetingRecorder" required>
-                    <option [ngValue]="recorderId"  selected="selected">{{userName}}</option>
-                    <option *ngFor="let rec of recorder" [ngValue]="rec.id">{{rec.firstlast}}</option>
-              </select>
+              <option [ngValue]="recorderId"  selected="selected">{{userName}}</option>
+              <option *ngFor="let rec of recorder" [ngValue]="rec.id">{{rec.firstlast}}</option>
+            </select>
           </div>
-
         </div>
 
         <div class="form-group row">
-
           <label for="example-url-input" class="col-md-2 col-form-label">Agenda :</label>
           <div class="col-md-4">
             <textarea id="agenda" class="form-control" name="agenda" rows="5" [(ngModel)]="meetings.meetingAgenda" #name="ngModel"></textarea>
           </div>
-
           <label for="example-url-input" class="col-md-2 col-form-label">Attendees* :
-                  <button type="button" id="check" value="Check All Rows" class="btn btn-default btn-sm" (click)="checkAll()">
-                    <span class="glyphicon glyphicon-check glyphiconIcon" aria-hidden="true" data-toggle="tooltip" title="Select/Deselect All Attendees"></span>
-                  </button>
+            <button type="button" id="check" value="Check All Rows" class="btn btn-default btn-sm" (click)="checkAll()">
+              <span class="glyphicon glyphicon-check glyphiconIcon" aria-hidden="true" data-toggle="tooltip" title="Select/Deselect All Attendees"></span>
+            </button>
           </label>
           <div class="col-md-4">
             <div *ngFor="let option of options">
@@ -155,16 +147,14 @@
 
         <div class="form-group row">
           <div class="col-lg-10 col-lg-offset-3 text-center">
-            <button type="submit" class="btn btn-primary" [class.disabled]="isClickedOnce" (click)="isClickedOnce = true" >Submit
-                    <span class="glyphicon glyphicon-ok" aria-hidden="true" data-toggle="tooltip" title="Submit"></span>
+            <button type="submit" class="btn btn-primary" [class.disabled]="isClickedOnce" (click)="isClickedOnce = true">Submit
+              <span class="glyphicon glyphicon-ok" aria-hidden="true" data-toggle="tooltip" title="Submit"></span>
             </button>
-
             <button type="reset" class="btn btn-warning btn-md addButton" (click)="reset()">
-                          Reset  <span class="glyphicon glyphicon-refresh" aria-hidden="true" data-toggle="tooltip" title="Reset"></span>
+                Reset  <span class="glyphicon glyphicon-refresh" aria-hidden="true" data-toggle="tooltip" title="Reset"></span>
             </button>
-
             <button type="button" class="btn btn-danger btn-md addButton" routerLink="/meetingList" routerLinkActive="active">
-                          Cancel        <span class="glyphicon glyphicon-remove" aria-hidden="true" data-toggle="tooltip" title="Go Back to List"></span>
+                Cancel <span class="glyphicon glyphicon-remove" aria-hidden="true" data-toggle="tooltip" title="Go Back to List"></span>
             </button>
           </div>
         </div>
