before after analytics

--- a/src/app/meetingList/meetingList.component.html
+++ b/src/app/meetingList/meetingList.component.html
@@ -65,7 +65,7 @@
                 <td class="col-md-2 td">
                   {{meeting.meetingAgenda}}
                 </td>
-                <td class="col-md-2 td">
+                <td class="col-md-2 td" data-toggle="tooltip" title="">
                   {{meeting.meetingAttendees}}
                 </td>
                 <td class="col-md-1">
