--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,5 +1,5 @@
 footer {
-  position:absolute;
+  position: fixed;
   bottom: 0px;
   margin: 0px auto;
   width: 100%;
@@ -64,8 +64,8 @@ header {
   height: 51px;
 }
 .navbar-default .navbar-nav>li>a {
-    color: #f5f5f5;
+  color: #f5f5f5;
 }
 .navbar-default .navbar-nav>li>a:hover{
-    color: #00ace6;
+  color: #00ace6;
 }
