--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -15,9 +15,9 @@
         </div>
         <input type="submit" name="login" class="login loginmodal-submit" [disabled]="user.invalid" value="Login">
       </form>
-      <div class="login-help">
+      <!-- <div class="login-help">
         <a href="#">Register</a> - <a href="#">Forgot Password</a>
-      </div>
+      </div> -->
     </div>
   </div>
 </div>
