--- a/src/app/meetingList/meetingList.component.css
+++ b/src/app/meetingList/meetingList.component.css
@@ -5,23 +5,19 @@
   margin-left: 5px;
 }
 
+.meetingListModal {
+  width: 100% !important;
+}
+
 .meetingList {
   padding: 10px;
   width: 100% !important;
   margin: 0 auto;
   border-radius: 2px;
-  height: 450px;
-}
-
-.meetingListModal {
-  width: 100% !important;
-  /*background-color: #F7F7F7;*/
-  height: 499px;
 }
 
 .tableForm {
   width: 100% !important;
-  height: 476px;
   overflow: auto;
 }
 
@@ -61,7 +57,7 @@ table th {
   text-align: center;
 }
 
-table td {
+table td{
   overflow: hidden;
   white-space: nowrap;
   text-overflow: ellipsis;
@@ -112,4 +108,281 @@ table td {
 .search {
   margin-top: 10px;
   margin-left: 10px;
+}
+
+@media only screen and (min-height: 1375px) {
+    .meetingListModal {
+      height: 1195px;
+    }
+    .meetingList {
+      height: 1195px;
+    }
+    .tableForm {
+      height: 1165px;
+    }
+}
+
+@media only screen and (min-height: 1325px) and (max-height: 1374px) {
+    .meetingListModal {
+      height: 1145px;
+    }
+    .meetingList {
+      height: 1145px;
+    }
+    .tableForm {
+      height: 1115px;
+    }
+}
+
+@media only screen and (min-height: 1275px) and (max-height: 1324px) {
+    .meetingListModal {
+      height: 1095px;
+    }
+    .meetingList {
+      height: 1095px;
+    }
+    .tableForm {
+      height: 1065px;
+    }
+}
+
+
+@media only screen and (min-height: 1225px) and (max-height: 1274px) {
+    .meetingListModal {
+      height: 1045px;
+    }
+    .meetingList {
+      height: 1045px;
+    }
+    .tableForm {
+      height: 1015px;
+    }
+}
+
+@media only screen and (min-height: 1175px) and (max-height: 1224px) {
+    .meetingListModal {
+      height: 995px;
+    }
+    .meetingList {
+      height: 995px;
+    }
+    .tableForm {
+      height: 965px;
+    }
+}
+
+@media only screen and (min-height: 1125px) and (max-height: 1174px) {
+    .meetingListModal {
+      height: 945px;
+    }
+    .meetingList {
+      height: 945px;
+    }
+    .tableForm {
+      height: 915px;
+    }
+}
+
+@media only screen and (min-height: 1075px) and (max-height: 1124px) {
+    .meetingListModal {
+      height: 895px;
+    }
+    .meetingList {
+      height: 895px;
+    }
+    .tableForm {
+      height: 865px;
+    }
+}
+
+@media only screen and (min-height: 1025px) and (max-height: 1074px) {
+    .meetingListModal {
+      height: 845px;
+    }
+    .meetingList {
+      height: 845px;
+    }
+    .tableForm {
+      height: 815px;
+    }
+}
+
+@media only screen and (min-height: 975px) and (max-height: 1024px) {
+    .meetingListModal {
+      height: 795px;
+    }
+    .meetingList {
+      height: 795px;
+    }
+    .tableForm {
+      height: 765px;
+    }
+}
+
+@media only screen and (min-height: 925px) and (max-height: 974px) {
+    .meetingListModal {
+      height: 745px;
+    }
+    .meetingList {
+      height: 745px;
+    }
+    .tableForm {
+      height: 715px;
+    }
+}
+
+@media only screen and (min-height: 875px) and (max-height: 924px) {
+    .meetingListModal {
+      height: 695px;
+    }
+    .meetingList {
+      height: 695px;
+    }
+    .tableForm {
+      height: 665px;
+    }
+}
+
+@media only screen and (min-height: 825px) and (max-height: 874px) {
+    .meetingListModal {
+      height: 645px;
+    }
+    .meetingList {
+      height: 645px;
+    }
+    .tableForm {
+      height: 615px;
+    }
+}
+
+@media only screen and (min-height: 775px) and (max-height: 824px) {
+    .meetingListModal {
+      height: 595px;
+    }
+    .meetingList {
+      height: 595px;
+    }
+    .tableForm {
+      height: 565px;
+    }
+}
+
+@media only screen and (min-height: 768px) and (max-height: 774px) {
+    .meetingListModal {
+      height: 588px;
+    }
+    .meetingList {
+      height: 588px;
+    }
+    .tableForm {
+      height: 558px;
+    }
+}
+
+@media only screen and (min-height: 718px) and (max-height: 767px) {
+    .meetingListModal {
+      height: 538px;
+    }
+    .meetingList {
+      height: 538px;
+    }
+    .tableForm {
+      height: 508px;
+    }
+}
+
+@media only screen and (min-height: 668px) and (max-height: 717px) {
+    .meetingListModal {
+      height: 488px;
+    }
+    .meetingList {
+      height: 488px;
+    }
+    .tableForm {
+      height: 458px;
+    }
+}
+
+@media only screen and (min-height: 618px) and (max-height: 667px) {
+    .meetingListModal {
+      height: 438px;
+    }
+    .meetingList {
+      height: 438px;
+    }
+    .tableForm {
+      height: 408px;
+    }
+}
+
+@media only screen and (min-height: 568px) and (max-height: 617px) {
+    .meetingListModal {
+      height: 388px;
+    }
+    .meetingList {
+      height: 388px;
+    }
+    .tableForm {
+      height: 358px;
+    }
+}
+
+@media only screen and (min-height: 518px) and (max-height: 567px) {
+    .meetingListModal {
+      height: 338px;
+    }
+    .meetingList {
+      height: 338px;
+    }
+    .tableForm {
+      height: 308px;
+    }
+}
+
+@media only screen and (min-height: 468px) and (max-height: 517px) {
+    .meetingListModal {
+      height: 288px;
+    }
+    .meetingList {
+      height: 288px;
+    }
+    .tableForm {
+      height: 258px;
+    }
+}
+
+@media only screen and (min-height: 418px) and (max-height: 467px) {
+    .meetingListModal {
+      height: 238px;
+    }
+    .meetingList {
+      height: 238px;
+    }
+    .tableForm {
+      height: 208px;
+    }
+}
+
+@media only screen and (min-height: 368px) and (max-height: 417px) {
+    .meetingListModal {
+      height: 188px;
+    }
+    .meetingList {
+      height: 188px;
+    }
+    .tableForm {
+      height: 158px;
+    }
+}
+
+@media only screen and (min-height: 318px) and (max-height: 367px) {
+    .meetingListModal {
+      height: 138px;
+    }
+    .meetingList {
+      height: 138px;
+    }
+    .tableForm {
+      height: 108px;
+    }
 }
