--- a/src/app/meeting/meeting.component.html
+++ b/src/app/meeting/meeting.component.html
@@ -1,3 +1,6 @@
+<app-navigation></app-navigation>
+<app-header></app-header>
+<app-alert></app-alert>
 <router-outlet>
   <div class="wrapper">
     <div class="Wrapper1">
