--- a/src/app/meetingList/meetingList.component.html
+++ b/src/app/meetingList/meetingList.component.html
@@ -1,3 +1,6 @@
+<app-navigation></app-navigation>
+<app-header></app-header>
+<app-alert></app-alert>
 <div class="meetingListModal container">
   <div class="meetingList">
     <!-- Dialog box for deletion confirmation -->
