--- a/src/app/moreDetails/moreDetails.component.html
+++ b/src/app/moreDetails/moreDetails.component.html
@@ -1,3 +1,6 @@
+<app-navigation></app-navigation>
+<app-header></app-header>
+<app-alert></app-alert>
 <div class="container moreDetails">
   <div class="tableSection">
     <section class="primaryDetails row">
