--- a/src/app/quarterMeetings/quarterMeetings.component.html
+++ b/src/app/quarterMeetings/quarterMeetings.component.html
@@ -1,3 +1,6 @@
+<app-navigation></app-navigation>
+<app-header></app-header>
+<app-alert></app-alert>
 <div class="container">
   <ul class="nav nav-tabs nav-justified">
     <li class="active" style="text-align:centre;"><a data-toggle="pill" href="#meetingsYearly"  (click)="removeSvg()">Meetings Conducted Yearly</a></li>
